# AoC-2024

./: Cargo.toml
benches/: aoc.rs  day1.rs
src/: main.rs
src/day1/: mod.rs
src/day2/: input.test.txt  input.test2.txt  mod.rs
src/day3/: mod.rs
src/day4/: input.test.txt  mod.rs
