[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.5.1", ffeatures = ["html_reports"] }


[[bench]]
name = "aoc"
harness = false

[dependencies]
strum = { version = "0.26.3", features = ["derive"] }
regex = "1.11.1"
strum_macros = "0.26.4"
